feat: interface update

--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,14 @@
-.App {
+
+.App-header {
+  background-color: #524;
+  padding: 20px;
+  color: white;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.App-header a {
   color: white;
+  text-decoration: none;
 }
 
 .App-title {
@@ -25,4 +22,43 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+main {
+  width: 90%;
+  margin: 1rem auto;
+}
+
+.posts-listing {
+  list-style: none;
+  padding: 0;
+  margin: 2rem 0;
+}
+
+.posts-listing li {
+  margin-bottom: 2rem;
+  font-size: 1.6rem;
+}
+
+.button {
+  text-decoration: none;
+  background: #524;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+input, textarea {
+  width: 100%;
+  display: block;
+  margin-bottom: 1rem;
+}
+
+input {
+  font-size: 1.6rem;
+}
+
+textarea {
+  height: 50vh;
+  font-size: 1.2rem;
 }
